#AWE-4000R Project

noinst_LIBRARIES = libawedb.a

libawedb_a_SOURCES = CUserInfo.cpp CDept.cpp CInvDet.cpp CInvHead.cpp CRtInv.cpp CInvVol.cpp CMachine.cpp COperator.cpp CRtInv.cpp CSysArg.cpp CSysLog.cpp  CClient.cpp CCbhz.cpp CInvKind.cpp CUserMore.cpp CInvServ.cpp CPrnInfo.cpp CInvSum.cpp CTax.cpp  CNetPara.cpp  CTable.cpp CDB.cpp  

INCLUDES = -I../SYS -I../DRV -I../LIB -I./

