#AWE-4000R Project

noinst_LIBRARIES = libawegui.a

libawegui_a_SOURCES = CaButton.cpp CaButtonList.cpp CaGroup.cpp CaIMEWin.cpp CaInput.cpp CaInputList.cpp CaLabelBar.cpp CaLabel.cpp CaListBox.cpp CaMsgBox.cpp CaMultiLineInput.cpp CaMultiPageWindow.cpp CaObject.cpp CaProgressBar.cpp CaScrollBar.cpp CaScrollGroup.cpp CaWindow.cpp FourLabelsCommonWin.cpp MultiBtnCommonWin.cpp MultiLabelCommonWindow.cpp MultiInputCommonWin.cpp PosFrame.cpp StringWrap.cpp CaLableSelect.cpp T9_pinyin.c T9_bihua.c phrase.c pinyin.c wubi.c display.c latinfont.c MultiPageCommonWin.cpp MultiBtnNewCommonWin.cpp

INCLUDES = -I../SYS -I../INC -I../DRV  -I./  
