#AWE-4000R Project

noinst_LIBRARIES = libawefiscal.a

libawefiscal_a_SOURCES = FiscalMainMenu.cpp  FiscalFun.cpp InfoUpdateMenu.cpp  MediumDeclareMenu.cpp  NetDeclareMenu.cpp ChangeDiskPswWin.cpp InitEditWin.cpp FpblWin.cpp HqlxsjWin.cpp

INCLUDES = -I../../SYS -I../../DRV -I../../GUI -I../../DB -I../../LIB -I../../TPL -I../APP -I../SALE -I../INVMANAGE -I../YWXML -I../COMMON  -I../SERIAL -I../REPORT -I../API -I./ -I../
