#AWE-4000R Project

noinst_LIBRARIES = libaweinv.a

libaweinv_a_SOURCES = InvManageMainMenu.cpp InvVolFunc.cpp InvWasteWin.cpp InvManageFunc.cpp InvRetQueryWin.cpp InvReturnWin.cpp InvDistQueryWin.cpp  InvStubWin.cpp InvStubPrnWin.cpp  InvWasteMenu.cpp InvWstQueryWin.cpp InvWstWin.cpp  InvSegMenu.cpp  RetToInvWin.cpp HostToInvWin.cpp InvDownloadMenu.cpp InvDownloadDateWin.cpp InvDownloadNOWin.cpp InvWllqfpWin.cpp

INCLUDES = -I../../SYS -I../../DRV -I../../GUI -I../../DB -I../../TPL -I../../LIB  -I../SALE -I../REPORT -I../PROGRAM -I../YWXML -I./ -I../ -I../COMMON -I../API -I../SERIAL
