#AWE-4000R Project

noinst_LIBRARIES = libawemtn.a

libawemtn_a_SOURCES = MaintenanceMenu.cpp MaintenanceFunc.cpp ClearDepotWin.cpp SelfTestMenu.cpp SelfTestFunc.cpp ChangeDateTimeWin.cpp SystemUpgrade.cpp DownLoadMacWin.cpp UpdateMachineInfoWin.cpp

INCLUDES = -I../../SYS -I../../DRV -I../../GUI  -I../../DB -I../../LIB -I../ -I./ -I../../TPL -I../SALE -I../INVMANAGE -I../COMMON -I../PROGRAM -I../NETMODULE -I../SERIAL
