#AWE-4000R Project

noinst_LIBRARIES = libaweprg.a


libaweprg_a_SOURCES = DeptEditWin.cpp OperatorEditWin.cpp SysArgEditWin.cpp SysArgMenu.cpp ProgramMainMenu.cpp ClientEditWin.cpp  SelDefWin.cpp DataIOMenu.cpp DataIOFunc.cpp PswEditWin.cpp  ZhqParaSetMenu.cpp  ZhqBtlSetWin.cpp ZhqIpaddrSetWin.cpp  ZhqServerSetWin.cpp  ZhqFtpSetWin.cpp


INCLUDES = -I../../SYS -I../../DRV -I../../GUI  -I../../DB -I../../TPL -I../../LIB -I../API -I../YWXML -I../COMMON -I../SERIAL -I../REPORT  -I../MAINTAIN  -I../NETMODULE  -I../NETMODULE/proc    -I../ -I./
