#AWE-4000R Project

noinst_LIBRARIES = libawerpt.a

libawerpt_a_SOURCES = FiscalReportMenu.cpp BasicReportMenu.cpp ReportMainMenu.cpp MachineInfoWin.cpp ReportFunc.cpp CommerceReportMenu.cpp  CorpInfoWin.cpp  MonthSaleSumWin.cpp MonthSaleShowWin.cpp DaySaleSumWin.cpp SysLogDateWin.cpp IssueSumDateWin.cpp  InvKindInfoWin.cpp  TaxInfoWin.cpp TimeSumDateWin.cpp TimeSumInfoWin.cpp printer.c

INCLUDES = -I../../SYS -I../../DRV -I../../GUI  -I../../DB -I../../LIB -I../../TPL -I../SALE -I./ -I../ -I../COMMON -I../NETMODULE -I../NETMODULE/proc -I../NETMODULE/gui_net -I../YWXML -I../API 
