#AWE-4000R Project

noinst_LIBRARIES = libawesale.a

libawesale_a_SOURCES = SaleFunc.cpp SaleData.cpp ProductSaleMainMenu.cpp ProductSaleWin.cpp 

INCLUDES = -I../../SYS -I../../DRV -I../../GUI  -I../../DB -I../../LIB -I../../TPL -I../REPORT -I../PROGRAM -I../API -I./ -I../ -I../COMMON  -I../YWXML -I../SERIAL
